Minor bug fix: alignment on AccountPage
- Addressed misalignment of buttons on AccountPage by removing width rules from btn-wrapper elements

--- a/src/pages/AccountPage/AccountPage.scss
+++ b/src/pages/AccountPage/AccountPage.scss
@@ -24,9 +24,7 @@
     }
 
     &__btn-wrapper {
-        max-width: 1fr;
         height: 10rem;
-        width: 10rem;
     }
 
     &__btn {
